tests/syntax_error/missing_global_keyword_type.jou
foo: int  # Error: missing 'global' or 'const' keyword when defining global variable
